fix Travice files

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ compiler:
 before_install:
     - sudo apt-get update
     - sudo apt-get install libgtest-dev
+    - sudo apt-get install libgtest0
     - "cd /usr/src/gtest && sudo cmake . && sudo cmake --build . && sudo mv libg* /usr/local/lib/ ; cd -"
 before_script:
     - pwd
